--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,9 +1,33 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
-    compile project(path: ':annotation')
+    implementation project(path: ':annotation')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+buildscript {
+    ext.kotlin_version = '1.4.32'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
